--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
